src/custom.scss
@import "styles/reset.css";
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');

* {
    font-family: 'Rubik', sans-serif;
}

:root {
    --primary-blue: #3a86ff;
    --secondary-blue: #a2d2ff;
    --primary-orange: #FF9900;
    --number-of-lines: 4;
    --number-of-lines-mobile: 5;
}

/* reset button */
button {
    background-color: transparent;
    border-width: 0;
    width: auto;
    font-family: inherit;
    font-size: inherit;
    font-style: inherit;
    font-weight: inherit;
    line-height: inherit;
    padding: 0;
    margin: 0;
  }
/* We selectedivly override base styles to create a red theme */
.btc-search .sui-search-box__submit {
  background: none;
  background-color: #FF9900;
  margin-left: 0;
  border-radius: 0 12px 12px 0;
  padding: 13px 25px;
}

.btc-search .sui-layout-sidebar{
    width: 30%;
}

.btc-search .sui-layout-main {
    width: 100%;
}
.btc-search .sui-layout-main-footer {
    padding-top: 20px;
    padding-bottom: 20px;
    margin-bottom: 10px;
}

.search-box-with-contribute {
    display: grid;
    grid-template-columns: 90% auto;
    width: 100%;
    place-content: center;

    .search-box__contribute-wrapper {
        grid-column: 1/3;
        margin-left: auto;
        margin-top: 10px;

        span {
            display: block;
            font-size: 12px;
            font-weight: 500;
            color: var(--chakra-colors-gray-400);
            transition: all ease-in-out 100ms;

            &:hover {
                color: var(--chakra-colors-gray-600);
            }
            &:active {
                transform: translateY(1px);
                color: var(--chakra-colors-purple-500);
            }
        }
    }
    @media screen and (min-width: 640px) {
        grid-template-columns: 50% auto;
    }
}


@media only screen and (max-width: 1200px) {
    .btc-search {
        .sui-layout-sidebar {
            display: none;
        }
    
        .sui-layout-main {
            padding: 32px;
        }
    }
}

@media only screen and (max-width: 640px) {
    .btc-search {
        .header {
            font-weight: 300;
            font-size: small;
        }
        .logo {
            width: 8rem;
        }
        .url-display { 
            font-size: 12px;
            overflow: hidden;
            white-space: nowrap;
        }
        .sui-layout-main {
            padding: 0px;
        }
    }
}

.btc-search { 
    .sui-layout-sidebar-toggle {
        display: none;
    }
    .sui-layout-body:after {
        display: none;
    }
}

.btc-search .sui-facet-view-more {
  color: red;
}

.header {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin: 12px 0 24px;
    text-align: center;
    margin-bottom: auto;
    color: #3a56e4;
    font-weight:400;
    padding-top: 5%;
    padding-bottom: 16px;
}

.header .description {
    font-weight: bold;
}

.logo {
    width: 12rem;
    margin: auto;
}

.btc-search {
    background: #fcfcfc;
}


.sui-layout-header {
    border-bottom: 0px;
    margin: auto 0;

    &:focus {
        border-bottom: 0px;
    }
}

.sui-search-box__text-input {
    border-radius: 35px 0px 0px 35px;
    border-right: none;
}

#profileimage {
    border-radius: 50px;
    width: 32px;
    height: 32px;
    position: absolute;
    right: 40px;
    bottom: 12px;
}

#optionsbar {
    width: 100%;
    height: 50px;
    border-width: 0px;
    border-bottom: 1px;
    border-color: lightgray;
    border-style: solid;
    display: flex;
    align-items: flex-end;
    font-family: 'Arial';
    font-size: 13px;
    color: rgb(112, 112, 112);
    padding-top: 64px;
}

#optionsmenu1 {
    list-style: none;
    display: flex;
    flex-direction: row;
    padding: 0px;
    margin: 0px;
    margin-left: 150px;
}

#optionsmenu1 li {
    padding: 0px 10px 15px 20px;
}

#optionsmenuactive {
    color: #4285F4;
    font-weight: bold;
    position: relative;
    z-index: -1;
}

.pagelist {
    list-style: none;
    color: rgb(29, 135, 255);
    display: flex;
    flex-direction: row;
    font-size: 12px;
    margin-bottom: 30px;
    margin-left: 100px;
}

.pagelistprevious::before {
    content: '<';
    display: block;
    position: absolute;
    right: 12px;
    top: -35px;
    color: rgb(29, 135, 255);
    font-size: 20px;
    transform: scale(0.7, 1.2);
}

.pagelistfirst {
    margin-left: 20px;
    font-size: 13px;
}

.pagelistnumber::before, .pagelistfirst::before {
    content: '';
    display: block;
    position: absolute;
    left: -2px;
    top: -21px;
    border-radius: 50px;
    width: 10px;
    height: 10px;
    background-color: white;
    z-index: 3;
}

.pagelistnumber::after {
    content: '';
    display: block;
    position: absolute;
    left: -6px;
    top: -25px;
    border-radius: 50px;
    width: 18px;
    height: 18px;
    background-color: rgb(255, 196, 0);
    z-index: 2;
}

.paging-info {
    margin-left: auto;
    display: flex;
    flex-direction: column;
}
.paging-info strong {
    text-align: right;
}
.paging-info p {
    margin: 0;
    padding: 4px 0;
}

